Rename project from xibe-pr1 to PR-REVIEW-XIBE, updating titles, paths, and references across all relevant files.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xibe-pr1",
+  "name": "pr-review-xibe",
   "version": "1.0.0",
   "description": "AI-powered PR review bot for GitHub",
   "main": "bot.js",
