Update .env.example and README.md to replace OpenAI API references with Xibe.app API, reflecting the new service endpoint and adjusting diagram styles for clarity.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # AI Configuration
-AI_API=https://api.openai.com/v1
+AI_API="https://api.xibe.app/openai"
 AI_KEY=your_ai_api_key_here
 
 # Two-Stage AI Models Configuration
